fix woocommerce page overflow hidden and span on sale

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Empralidad - Theme
 Author: Alan Pereyra
 Author URI: https://empralidad.com.ar/alanpereyra
 Description: Empralidad - Theme es un tema integramente hecho por Alan Pereyra. Pensado para ser gestionado por personas sin ningún conocimiento de programación. Es un tema minimalista flat desing, pensado con la filosofía de menos es más. Hecho con PHP, CSS, HTML5 y Javascript.
-Version: 5.7.3
+Version: 5.7.4
 License: Attribution-NonCommercial-NoDerivatives 3.0 IGO
 License URI: https://creativecommons.org/licenses/by-nc-nd/3.0/igo/legalcode
 Text Domain: empralidad
@@ -1482,6 +1482,8 @@ a.button.product_type_variable,a.button.product_type_simple, a.button.product_ty
 .woocommerce span.onsale {
  background: var(--emp-head-title-bg)!important;
  color: var(--emp-head-title-color)!important;
+ left: 0!important;
+ top: 0!important;
 }
 tr.woocommerce-shipping-totals.shipping {
 	max-width: 100vw
@@ -1515,6 +1517,9 @@ li.product:hover h2, li.product:hover span {
 }
 .woocommerce div.product div.summary {
 	overflow: hidden
+}
+.woocommerce div.product{
+	overflow: hidden;
 }
 .product-category.product {
 	overflow: hidden
@@ -1895,6 +1900,8 @@ h2.woocommerce-loop-category__title {
 	font-size: 13px;
 	height: 0;
 	line-height: 2.8;
+	margin: -0.5em 0 0 0;
+	padding: 0 6px;
 }
 span#reply-title {
 	display: none
@@ -1919,7 +1926,6 @@ li span.price del {
 .woo-page-margin {
 	margin-top: 100px !important;
 	margin-bottom: 200px !important;
-	overflow: hidden;
 }
 nav.woocommerce-pagination {
 	order: 4
